--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,23 @@ a {
   margin: auto;
   max-width: 1000px;
 }
+.table__actions__wrp{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 20px 0;
+}
+.table__actions {
+  background-color: transparent;
+  border: transparent;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  &:hover {
+    background-color: #eee;
+  }
+}
+
 @media all and (width <= 768px){
   body {
     padding: 0 20px;
